# serializer version: 1
# name: test_component_config_validation_error[basic]
  list([
    "Invalid config for [iot_domain.non_adr_0007]: expected str for dictionary value @ data['option1']. Got 123. (See ./tests/fixtures/core/config/basic/configuration.yaml, line 6). ",
    "Invalid config for [iot_domain]: required key not provided @ data['platform']. Got None. (See ./tests/fixtures/core/config/basic/configuration.yaml, line 9). ",
    "Invalid config for [adr_0007_2]: required key not provided @ data['adr_0007_2']['host']. Got None. (See ?, line ?). ",
    "Invalid config for [adr_0007_3]: expected int for dictionary value @ data['adr_0007_3']['port']. Got 'foo'. (See ./tests/fixtures/core/config/basic/configuration.yaml, line 20). ",
  ])
# ---
# name: test_component_config_validation_error[basic_include]
  list([
    "Invalid config for [iot_domain.non_adr_0007]: expected str for dictionary value @ data['option1']. Got 123. (See ./tests/fixtures/core/config/basic_include/integrations/iot_domain.yaml, line 5). ",
    "Invalid config for [iot_domain]: required key not provided @ data['platform']. Got None. (See ./tests/fixtures/core/config/basic_include/integrations/iot_domain.yaml, line 8). ",
    "Invalid config for [adr_0007_2]: required key not provided @ data['adr_0007_2']['host']. Got None. (See ?, line ?). ",
    "Invalid config for [adr_0007_3]: expected int for dictionary value @ data['adr_0007_3']['port']. Got 'foo'. (See ./tests/fixtures/core/config/basic_include/configuration.yaml, line 4). ",
  ])
# ---
# name: test_component_config_validation_error[include_dir_list]
  list([
    "Invalid config for [iot_domain.non_adr_0007]: expected str for dictionary value @ data['option1']. Got 123. (See ./tests/fixtures/core/config/include_dir_list/iot_domain/iot_domain_2.yaml, line 2). ",
    "Invalid config for [iot_domain]: required key not provided @ data['platform']. Got None. (See ./tests/fixtures/core/config/include_dir_list/iot_domain/iot_domain_3.yaml, line 2). ",
  ])
# ---
# name: test_component_config_validation_error[include_dir_merge_list]
  list([
    "Invalid config for [iot_domain.non_adr_0007]: expected str for dictionary value @ data['option1']. Got 123. (See ./tests/fixtures/core/config/include_dir_merge_list/iot_domain/iot_domain_2.yaml, line 2). ",
    "Invalid config for [iot_domain]: required key not provided @ data['platform']. Got None. (See ./tests/fixtures/core/config/include_dir_merge_list/iot_domain/iot_domain_2.yaml, line 5). ",
  ])
# ---
# name: test_component_config_validation_error[packages]
  list([
    "Invalid config for [iot_domain.non_adr_0007]: expected str for dictionary value @ data['option1']. Got 123. (See ./tests/fixtures/core/config/packages/configuration.yaml, line 11). ",
    "Invalid config for [iot_domain]: required key not provided @ data['platform']. Got None. (See ./tests/fixtures/core/config/packages/configuration.yaml, line 16). ",
    "Invalid config for [adr_0007_2]: required key not provided @ data['adr_0007_2']['host']. Got None. (See ?, line ?). ",
    "Invalid config for [adr_0007_3]: expected int for dictionary value @ data['adr_0007_3']['port']. Got 'foo'. (See ?, line ?). ",
  ])
# ---
# name: test_component_config_validation_error[packages_include_dir_named]
  list([
    "Invalid config for [iot_domain.non_adr_0007]: expected str for dictionary value @ data['option1']. Got 123. (See ./tests/fixtures/core/config/packages_include_dir_named/integrations/iot_domain.yaml, line 6). ",
    "Invalid config for [iot_domain]: required key not provided @ data['platform']. Got None. (See ./tests/fixtures/core/config/packages_include_dir_named/integrations/iot_domain.yaml, line 9). ",
    "Invalid config for [adr_0007_2]: required key not provided @ data['adr_0007_2']['host']. Got None. (See ?, line ?). ",
    "Invalid config for [adr_0007_3]: expected int for dictionary value @ data['adr_0007_3']['port']. Got 'foo'. (See ?, line ?). ",
  ])
# ---
